INTRO ISSUE FIXED